@@ -1,5 +1,7 @@
 5/7/25:
 
+- Add step 6 to pseudocode
+- Add new game button functionality
 - Add new game button and styling
 - Move winner notification to alert box
 - Cells with value of 0 now show empty
@@ -11,7 +13,7 @@
 - Change order of elements in html file for better flow
 - Adjust winner notification
 - Create winner h1 class
-- Step 5c complete
+- Complete step 5c
 - Add text notification of winner
 - Add check for if game board is full in event of a tie
 - Fix "cell taken" alert continuing to show when valid cell is chosen
